Fix issues related to Java v17 bump (#4589)